--- a/src/components/layoutButton/__docs__/layoutButton.mdx
+++ b/src/components/layoutButton/__docs__/layoutButton.mdx
@@ -8,6 +8,7 @@ import { Playground, Props } from 'docz'
 import { State } from 'react-powerplug'
 import { LayoutButton } from './../index.js'
 import './layoutButton.css'
+import NameSpace from '../../../__docs__/NameSpace'
 
 # Layout Button
 
@@ -42,3 +43,7 @@ import './layoutButton.css'
 ## API
 
 <Props of={LayoutButton} />
+
+## Translation Namespace
+
+<NameSpace name="Buttons" />
