--- a/src/components/measurementTable/__docs__/measurementTable.mdx
+++ b/src/components/measurementTable/__docs__/measurementTable.mdx
@@ -7,6 +7,7 @@ route: /components/measurement-table
 import { Playground, Props } from 'docz'
 import { State } from 'react-powerplug'
 import { MeasurementTable } from './../index.js'
+import NameSpace from '../../../__docs__/NameSpace'
 //
 import measurements from './measurements.js'
 import timepoints from './timepoints.js'
@@ -42,3 +43,7 @@ import warnings from './warnings.js'
 ## API
 
 <Props of={MeasurementTable} />
+
+## Translation Namespace
+
+<NameSpace name="MeasurementTable" />
