--- a/src/components/toolbarSection/__docs__/toolbarSection.docs.mdx
+++ b/src/components/toolbarSection/__docs__/toolbarSection.docs.mdx
@@ -8,6 +8,7 @@ import { Playground, Props } from 'docz'
 import { State } from 'react-powerplug'
 import { ToolbarSection } from './../index.js'
 import exampleButtons from './exampleButtons.js'
+import NameSpace from '../../../__docs__/NameSpace'
 
 # ToolbarSection
 
@@ -32,3 +33,7 @@ A basic row of buttons for a toolbar. Active command is `WwwcTool`
 ## API
 
 <Props of={ToolbarSection} />
+
+## Translation Namespace
+
+<NameSpace name="Buttons" />
