--- a/src/components/cineDialog/__docs__/cineDialog.mdx
+++ b/src/components/cineDialog/__docs__/cineDialog.mdx
@@ -7,6 +7,7 @@ route: /components/cine-dialog
 import { Playground, Props } from 'docz'
 import { State } from 'react-powerplug'
 import { CineDialog } from './../index'
+import NameSpace from '../../../__docs__/NameSpace'
 
 # CINE Dialog
 
@@ -50,3 +51,7 @@ import { CineDialog } from './../index'
 ## API
 
 <Props of={CineDialog} />
+
+## Translation Namespace
+
+<NameSpace name="CineDialog" />
