--- a/src/components/userPreferencesModal/__docs__/userPreferences.mdx
+++ b/src/components/userPreferencesModal/__docs__/userPreferences.mdx
@@ -7,6 +7,7 @@ route: /components/user-preferences-modal
 import { Playground, Props } from 'docz'
 import { State } from 'react-powerplug'
 import { UserPreferencesModal } from './../index.js'
+import NameSpace from '../../../__docs__/NameSpace'
 //
 import windowLevelDefaults from './windowLevelDefaults.js'
 import hotkeyDefaults from './hotkeyDefaults.js'
@@ -47,3 +48,7 @@ import hotkeyDefaults from './hotkeyDefaults.js'
 ## API
 
 <Props of={UserPreferencesModal} />
+
+## Translation Namespace
+
+<NameSpace name="UserPreferencesModal" />
