feat(i18n): Add internationalization documentation and approach for components (#97)
* i18n basic setup

* ignore yalc builds

* COnfiguring wrapper component

* Uses ohif-i18n exports instead of I18Next library

* add ohif-i18n

* create general default preferences for docs

* Update userPreferences.mdx

* create GeneralPreferences component (tab)

* Update index.js

* Update UserPreferences.js

* set modal height min to 500px

* handle generalData

* perform change language from modal preferences

* update package.json

* update @ohif/i18n module

* update withTranslation

* remove unused general preferences data

* get current language dinamycally

* Update ToolbarButton.js

* i18n implementation on overlay

* refactoring

* fix generalDefaults

* i18n documentation

* Update translation.mdx

* i18n doc updates

* i18n doc updates

* fix docs

* Update yarn.lock

* remove duplicated yalc

* fix wrapper

* update ohif/i18n

* add new section explaining how to change the language by query param

* update ohif/i18n package

* update @ohif/i18n

--- a/src/components/cineDialog/__docs__/cineDialog.mdx
+++ b/src/components/cineDialog/__docs__/cineDialog.mdx
@@ -6,7 +6,8 @@ route: /components/cine-dialog
 
 import { Playground, Props } from 'docz'
 import { State } from 'react-powerplug'
-import { CineDialog } from './../CineDialog.js'
+import { CineDialog } from './../index'
+import NameSpace from '../../../__docs__/NameSpace'
 
 # CINE Dialog
 
@@ -50,3 +51,7 @@ import { CineDialog } from './../CineDialog.js'
 ## API
 
 <Props of={CineDialog} />
+
+## Translation Namespace
+
+<NameSpace name="CineDialog" />
