--- a/src/components/toolbarSection/__docs__/toolbarSection.docs.mdx
+++ b/src/components/toolbarSection/__docs__/toolbarSection.docs.mdx
@@ -4,10 +4,10 @@ menu: Components
 route: /components/toolbar-section
 ---
 
-import { Playground, Props } from 'docz'
-import { State } from 'react-powerplug'
-import { ToolbarSection } from './../index.js'
-import exampleButtons from './exampleButtons.js'
+import { Playground, Props } from 'docz';
+import { State } from 'react-powerplug';
+import { ToolbarSection } from './../index.js';
+import exampleButtons from './exampleButtons.js';
 
 # ToolbarSection
 
@@ -19,10 +19,7 @@ A basic row of buttons for a toolbar. Active command is `WwwcTool`
   <State
     initial={{
       buttons: exampleButtons,
-      activeCommand: exampleButtons[0].command,
-      setToolActive: () => {
-        alert('pressed')
-      },
+      activeButtons: [],
     }}
   >
     {({ state, setState }) => <ToolbarSection {...state} />}
