--- a/src/__docs__/translating.mdx
+++ b/src/__docs__/translating.mdx
@@ -5,14 +5,14 @@ route: /translating
 
 import LanguageSwitcher from '../components/languageSwitcher';
 
-# Translating
-
-You can switch the components' language in this documentation by choosing an
-available language in the select below:
+_You can switch the components' language in this documentation by choosing an
+available language in the select below:_
 
 <LanguageSwitcher />
 
 ---
+
+# Translating
 
 **React Viewerbase** supports internationalization using
 [i18next](https://www.i18next.com/) through the npm package
