--- a/src/__docs__/translating.mdx
+++ b/src/__docs__/translating.mdx
@@ -3,15 +3,6 @@ name: Translating
 route: /translating
 ---
 
-import LanguageSwitcher from '../components/languageSwitcher';
-
-_You can switch the components' language in this documentation by choosing an
-available language in the select below:_
-
-<LanguageSwitcher />
-
----
-
 # Translating
 
 **React Viewerbase** supports internationalization using
@@ -105,6 +96,10 @@ E.g.
 ```
 https://react.ohif.org?lng=es
 ```
+
+> You can also change the language of the components displayed in this
+> documentation by choosing an option in the
+> [Docs Settings](https://docs.ohif.org/docs-settings) section.
 
 ## Debugging translations
 
