--- a/src/__docs__/translating.mdx
+++ b/src/__docs__/translating.mdx
@@ -99,7 +99,7 @@ https://react.ohif.org?lng=es
 
 > You can also change the language of the components displayed in this
 > documentation by choosing an option in the
-> [Docs Settings](https://docs.ohif.org/docs-settings) section.
+> [Docs Settings](https://react.ohif.org/docs-settings) section.
 
 ## Debugging translations
 
