--- a/src/__docs__/getting-started.mdx
+++ b/src/__docs__/getting-started.mdx
@@ -28,11 +28,13 @@ these requirements with the goal of providing ready to use components.
 
 ### External Dependencies
 
-Some components use classes provided by the following libraries:
+We have tried to keep the number of external dependencies limited to make setup
+as easy as possible. You will, however, need to include either the default font
+or the font you set for your theme:
 
 ```js
 // Google Fonts, Sanchez & Roboto
-'https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700|Sanchez&display=swap'
+'https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700|Sanchez&display=swap';
 ```
 
 React Viewerbase also looks for theme CSS variabled defined on `:root`. You can
@@ -43,12 +45,12 @@ find a list of variables [on the theming page](/styling-and-theming)
 You can use components in your React app:
 
 ```js
-import React, { Component } from 'react'
-import { LayoutButton } from 'react-viewerbase'
+import React, { Component } from 'react';
+import { LayoutButton } from 'react-viewerbase';
 
 class Example extends Component {
   constructor(props) {
-    super(props)
+    super(props);
 
     this.state = {
       selectedCell: {
@@ -56,7 +58,7 @@ class Example extends Component {
         col: 1,
         row: 1,
       },
-    }
+    };
   }
 
   render() {
@@ -65,7 +67,7 @@ class Example extends Component {
         selectedCell={this.state.selectedCell}
         onChange={cell => this.setState({ selectedCell: cell })}
       />
-    )
+    );
   }
 }
 ```
