docs: rounded button groups should use existing icons

--- a/src/components/roundedButtonGroup/__docs__/roundedButtonGroup.mdx
+++ b/src/components/roundedButtonGroup/__docs__/roundedButtonGroup.mdx
@@ -4,9 +4,9 @@ menu: Components
 route: /components/rounded-button-group
 ---
 
-import { Playground, Props } from 'docz'
-import { State } from 'react-powerplug'
-import { RoundedButtonGroup } from './../index.js'
+import { Playground, Props } from 'docz';
+import { State } from 'react-powerplug';
+import { RoundedButtonGroup } from './../index.js';
 
 # Rounded Button Group
 
@@ -21,20 +21,12 @@ A basic styled toggle switch
       options: [
         {
           value: 'studies',
-          icon: {
-            name: 'studies',
-            width: '15px',
-            height: '13px',
-          },
+          icon: 'th',
           bottomLabel: 'Series',
         },
         {
           value: 'measurements',
-          icon: {
-            name: 'measurement-lesions',
-            width: '18px',
-            height: '10px',
-          },
+          icon: 'th-list',
           bottomLabel: 'Measurements',
         },
       ],
