--- a/src/components/toolbarSection/__docs__/toolbarSection.docs.mdx
+++ b/src/components/toolbarSection/__docs__/toolbarSection.docs.mdx
@@ -4,11 +4,11 @@ menu: Components
 route: /components/toolbar-section
 ---
 
-import { Playground, Props } from 'docz'
-import { State } from 'react-powerplug'
-import { ToolbarSection } from './../index.js'
-import exampleButtons from './exampleButtons.js'
-import NameSpace from '../../../__docs__/NameSpace'
+import { Playground, Props } from 'docz';
+import { State } from 'react-powerplug';
+import { ToolbarSection } from './../index.js';
+import exampleButtons from './exampleButtons.js';
+import NameSpace from '../../../__docs__/NameSpace';
 
 # ToolbarSection
 
@@ -20,9 +20,9 @@ A basic row of buttons for a toolbar. Active command is `WwwcTool`
   <State
     initial={{
       buttons: exampleButtons,
-      activeCommand: exampleButtons[0].command,
+      activeButtons: ['Pan'],
       setToolActive: () => {
-        alert('pressed')
+        alert('pressed');
       },
     }}
   >
