moar icons per line

--- a/src/elements/Icon/__docs__/icon.mdx
+++ b/src/elements/Icon/__docs__/icon.mdx
@@ -31,12 +31,11 @@ import { Icon, ICONS } from './../index.js';
               style={{
                 display: 'flex',
                 flexDirection: 'column',
-                flexBasis: '25%',
-                minWidth: '100px',
-                margin: '16px',
+                flexBasis: '150px',
+                margin: '2px',
                 backgroundColor: 'rgb(11, 95, 255)',
-                borderRadius: '8px',
-                padding: '16px',
+                borderRadius: '4px',
+                padding: '8px',
                 alignItems: 'center',
               }}
             >
