Tidy up icon docs

--- a/src/elements/Icon/__docs__/icon.mdx
+++ b/src/elements/Icon/__docs__/icon.mdx
@@ -63,6 +63,9 @@ plugins [by following the advice laid out here][svgo-configure]
 
 <Props of={Icon} />
 
+The `Icon` component takes a single prop of `name`, which indicates which Icon
+should be displayed. Again, the icon responds to contextual text/font styles.
+
 ## Attribution
 
 A large number of these icons are from [Font Awesome 5's free set.][fa-license]
