--- a/src/__docs__/getting-started.mdx
+++ b/src/__docs__/getting-started.mdx
@@ -32,10 +32,10 @@ Some components use classes provided by the following libraries:
 
 ```js
 // bootstrap@3.3.7
-'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'
+'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css';
 
 // Google Fonts, Sanchez & Roboto
-'https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700|Sanchez&display=swap'
+'https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700|Sanchez&display=swap';
 ```
 
 React Viewerbase also looks for theme CSS variabled defined on `:root`. You can
@@ -46,12 +46,12 @@ find a list of variables [on the theming page](/styling-and-theming)
 You can use components in your React app:
 
 ```js
-import React, { Component } from 'react'
-import { LayoutButton } from 'react-viewerbase'
+import React, { Component } from 'react';
+import { LayoutButton } from 'react-viewerbase';
 
 class Example extends Component {
   constructor(props) {
-    super(props)
+    super(props);
 
     this.state = {
       selectedCell: {
@@ -59,7 +59,7 @@ class Example extends Component {
         col: 1,
         row: 1,
       },
-    }
+    };
   }
 
   render() {
@@ -68,7 +68,7 @@ class Example extends Component {
         selectedCell={this.state.selectedCell}
         onChange={cell => this.setState({ selectedCell: cell })}
       />
-    )
+    );
   }
 }
 ```
