--- a/src/__docs__/translating.mdx
+++ b/src/__docs__/translating.mdx
@@ -10,41 +10,17 @@ route: /translating
 [@ohif/i18n](https://www.npmjs.com/package/@ohif/i18n), where is the main
 instance of i18n containing several languages and tools.
 
-## How to use running react-viewerbase locally
-
-**React-viewerbase** already implements the
-[I18nextProvider](https://react.i18next.com/latest/i18nextprovider) in the whole
-application, more information about how it was implemented in the Docz Theme can
-be found [here](#i18next-provider).
-
-## How to use **inside** OHIF Viewer
-
-[OHIF Viewers](https://github.com/OHIF/Viewers) already implements the
-[I18nextProvider](https://react.i18next.com/latest/i18nextprovider) in the whole
-application, you don't need to care about it, but more information about how it
-was implemented can be found
-[here](https://docs.ohif.org/essentials/translating.html).
-
-## How to use **outside** OHIF Viewer
-
-**Important**: using **react-viewerbase** outside
-[OHIF Viewers](https://github.com/OHIF/Viewers) requires a
-[I18nextProvider](https://react.i18next.com/latest/i18nextprovider) in the main
-React App, please check how to implement it
-[here](https://docs.ohif.org/essentials/translating.html#using-outside-of-ohif-viewer).
-
 ## How to translate components
 
-All you need is to use the
-[withTranslation HOC](https://react.i18next.com/latest/withtranslation-hoc) or
-the [useTranslation Hook](https://react.i18next.com/latest/usetranslation-hook)
-to get the `t` prop inside the component.
+All you need is to use the internal custom superset of
+[withTranslation HOC](https://react.i18next.com/latest/withtranslation-hoc),
+available at `src/utils/LanguageProvider.js`
 
 e.g.:
 
 ```js
 import React from 'react';
-import { withTranslation } from 'react-i18next';
+import { withTranslation } from '../utils/LanguageProvider.js';
 
 function MyComponent({ t }) {
   return <p>{t('my translated text')}</p>;
@@ -88,15 +64,8 @@ export default withTranslation('OuterSpace')(TheComponent);
 
 ## I18next Provider
 
-**React Viewerbase** pass down the `t` function trough the
-[docz wrappers](https://www.docz.site/docs/project-configuration#wrapper) and
-trough overlay components via
-[react-overlays](https://github.com/OHIF/react-viewerbase/blob/master/src/components/overlayTrigger/Overlay.js).
-
-When loaded inside OHIF Viewer, the i18next provider is used as peer dependency,
-so its the same of the main one shared with other extensions.
-
-Using it as a peer dependency, prevents double bundling repeated npm modules.
+**React Viewerbase** pass down the `t` function trough the custom
+[withTranslation HOC](https://github.com/OHIF/react-viewerbase/blob/master/src/utils/LanguageProvider.js).
 
 ---
 
