--- a/src/__docs__/translating.mdx
+++ b/src/__docs__/translating.mdx
@@ -12,16 +12,15 @@ instance of i18n containing several languages and tools.
 
 ## How to translate components
 
-All you need is to use the
-[withTranslation HOC](https://react.i18next.com/latest/withtranslation-hoc) or
-the [useTranslation Hook](https://react.i18next.com/latest/usetranslation-hook)
-to get the `t` prop inside the component.
+All you need is to use the internal custom superset of
+[withTranslation HOC](https://react.i18next.com/latest/withtranslation-hoc),
+available at `src/utils/LanguageProvider.js`
 
 e.g.:
 
 ```js
 import React from 'react';
-import { withTranslation } from 'react-i18next';
+import { withTranslation } from '../utils/LanguageProvider.js';
 
 function MyComponent({ t }) {
   return <p>{t('my translated text')}</p>;
@@ -29,11 +28,6 @@ function MyComponent({ t }) {
 
 export default withTranslation('MyNameSpace')(MyComponent);
 ```
-
-> **React-viewerbase** already implements the
-> [I18nextProvider](https://react.i18next.com/latest/i18nextprovider) in the
-> whole application, you don't need to care about it, but more information about
-> how it was implemented can be found [here](#i18next-provider).
 
 ---
 
@@ -56,7 +50,7 @@ E.g.
 export default withTranslation('TheNamespaceYouAreLookingFor')(TheComponentYouWantToUse);
 ```
 
-## How to use another NameSpace inside the current NameSpace?
+### How to use another NameSpace inside the current NameSpace?
 
 i18next provides a parsing feature able to get translations strings from any
 NameSpace, like this following example getting data from `InnerSpace` NameSpace:
@@ -70,15 +64,8 @@ export default withTranslation('OuterSpace')(TheComponent);
 
 ## I18next Provider
 
-**React Viewerbase** pass down the `t` function trough the
-[docz wrappers](https://www.docz.site/docs/project-configuration#wrapper) and
-trough overlay components via
-[react-overlays](https://github.com/OHIF/react-viewerbase/blob/master/src/components/overlayTrigger/Overlay.js).
-
-When loaded inside OHIF Viewer, the i18next provider is used as peer dependency,
-so its the same of the main one shared with other extensions.
-
-Using it as a peer dependency, prevents double bundling repeated npm modules.
+**React Viewerbase** pass down the `t` function trough the custom
+[withTranslation HOC](https://github.com/OHIF/react-viewerbase/blob/master/src/utils/LanguageProvider.js).
 
 ---
 
@@ -88,14 +75,8 @@ Using it as a peer dependency, prevents double bundling repeated npm modules.
 
 ## Changing the language
 
-**@ohif/i18n** automatically detects the language you want to set by adding a
-query param called `lng` in the url to change the language.
-
-E.g.
-
-```
-https://react.ohif.org?lng=es
-```
+The language choosing method is the same implemented in
+[OHIF Viewers](https://docs.ohif.org/essentials/translating.html#changing-the-language)
 
 > You can also change the language of the components displayed in this
 > documentation by choosing an option in the
