--- a/src/components/radioButtonList/__docs__/radioButtonList.mdx
+++ b/src/components/radioButtonList/__docs__/radioButtonList.mdx
@@ -24,12 +24,13 @@ import NameSpace from '../../../__docs__/NameSpace'
 	      },
 	      {
 	      	'label' : 'Button 2',
+	      	'id' : 'button2',
 	      	'checked' : false,
 	      	'onClick' : () => { alert('hello!'); }
 	      },
 	      {
 			'label' : 'Button 3',
-			'id' : 'coolButton3',
+			'id' : 'button3',
 			'checked' : true,
 	      }
       ]
