fix(Bootstrap): Removes bootstrap classes used by some components

--- a/src/components/studyList/__docs__/studyList.mdx
+++ b/src/components/studyList/__docs__/studyList.mdx
@@ -29,7 +29,7 @@ import moment from 'moment'
     }}>
         {({ state, setState }) => (
         <div className="row" style={{ backgroundColor: '#000', height: '600px' }}>
-            <div className="col-xs-12" style={{ padding: 0 }}>
+            <div style={{ padding: 0 }}>
                 <StudyList
                     studies={state.studies}
                     pageOptions={[1, 2, 3, 5, 10, 15, 20, 25, 50, 100]}
